RESOLVED FIXED165021
Fix exception scope verification failures in JSFunction.cpp.
https://bugs.webkit.org/show_bug.cgi?id=165021
Summary Fix exception scope verification failures in JSFunction.cpp.
Mark Lam
Reported 2016-11-21 19:43:35 PST
Patch coming.
Attachments
proposed patch. (5.23 KB, patch)
2016-11-21 19:46 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2016-11-21 19:46:37 PST
Created attachment 295323 [details] proposed patch.
Mark Lam
Comment 2 2016-11-28 15:39:06 PST
Thanks for the review. Landed in r209032: <http://trac.webkit.org/r209032>.
Note You need to log in before you can comment on or make changes to this bug.