Fix exception scope verification failures in JSFunction.cpp. https://bugs.webkit.org/show_bug.cgi?id=165021

Reviewed by Saam Barati.

* runtime/JSFunction.cpp:
(JSC::JSFunction::put):
(JSC::JSFunction::defineOwnProperty):



Canonical link: https://commits.webkit.org/182736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209032 268f45cc-cd09-0410-ab3c-d52691b4dbfc